changes in frontpage
